<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <TextView
            android:id="@+id/tv_toolbarHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/shape_rect_f_white_s_black"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_email_id" />



            <EditText
                android:id="@+id/et_emailId"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/email"
                android:background="@null"
                android:hint="@string/hint_email"
                android:gravity="center_vertical|left"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"
                android:layout_alignBottom="@+id/email"
                android:layout_alignTop="@+id/email" />


            />
        </RelativeLayout>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/btn_submit"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/submit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/alreadyhaevanaccount"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
